# ask-petra

./: README.d.md  README.md  pyproject.toml
app/: main.py
ask_petra/: chatbot_core.py
