[project]
name = "ask_petra"
version = "0.1.1"
description = ""
authors = [
    {name = "Karin Wu",email = "karin.wu@rgare.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "markdownify (>=1.2.0,<2.0.0)",
    "pypandoc-binary (>=1.15,<2.0)",
    "pyspark (>=4.0.1,<5.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "databricks-vectorsearch (>=0.61,<0.62)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "boto3 (>=1.40.67,<2.0.0)",
    "spacy (>=3.8.8,<4.0.0)",
    "elasticsearch (>=9.2.0,<10.0.0)",
    "certifi (>=2025.11.12,<2026.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "urllib3 (>=2.6.0)",
    "fonttools (>=4.60.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
